2025-08-28T00:51:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17282528280 # 749
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-28
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 906 1385 / 919 1398
* notice: next accum: outdated-unq outdated-all / unq all: 907 1386 / 919 1398
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-14] / []

2025-08-27T00:52:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17254215287 # 748
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-27
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 905 1384 / 917 1396
* notice: next accum: outdated-unq outdated-all / unq all: 906 1385 / 919 1398
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-08-13] / [2025-08-26]

2025-08-26T00:53:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17224730973 # 747
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-26
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 904 1383 / 917 1396
* notice: next accum: outdated-unq outdated-all / unq all: 905 1384 / 917 1396
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-12] / []

2025-08-25T00:55:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17196183070 # 746