@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-28T00:51:29Z",
-  "count_outdated" : 1386,
-  "uniques_outdated" : 907,
-  "count" : 1398,
-  "uniques" : 919,
+  "timestamp" : "2025-08-29T00:51:34Z",
+  "count_outdated" : 1387,
+  "uniques_outdated" : 908,
+  "count" : 1399,
+  "uniques" : 920,
   "clones" : [
-    {
-      "timestamp": "2025-08-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-16T00:00:00Z",
       "count": 1,
@@ -94,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-08-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
