@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-08-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-08-16T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -51,6 +46,11 @@
       "timestamp": "2025-08-26T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-08-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
